# ua-parser

./: .gitattributes  .gitignore  .npmignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LICENSE.txt  MANIFEST.in  Makefile  README.markdown  composer.json  freenode.ver  index.js  package.json  regexes.json  regexes.yaml  regexes_outdated.yaml  setup.py  test_device_compatibility.csv  tox.ini  user_agents_regex.yaml
c-sharp/: .gitignore  ua-parser.sln
c-sharp/ua-parser/: Client.cs  Device.cs  DeviceParser.cs  Extensions.cs  OS.cs  Parser.cs  UserAgent.cs  regexes.yaml  ua-parser.csproj  ua-parser.sln
c-sharp/ua-parser-console/: App.config  Program.cs  packages.config
c-sharp/ua-parser-console/Properties/: AssemblyInfo.cs
c-sharp/ua-parser/Properties/: AssemblyInfo.cs
c-sharp/ua-parser/ua-parser/: OSParser.cs  Parser.cs  UserAgent.cs  UserAgentParser.cs  packages.config  ua-parser.csproj
c-sharp/ua-parser/ua-parser-console/: Program.cs  ua-parser-console.csproj
c-sharp/ua-parser/ua-parser-tests/: ua-parser-tests.csproj
c-sharp/ua-parser/ua-parser-tests/Properties/: AssemblyInfo.cs
cpp/: CMakeLists.txt  LICENSE  Makefile  README.md  UaParser.cpp  UaParser.h  UaParserTest.cpp  main.cpp  ua_parser.cpp  ua_parser.h  ua_parser_test.cpp
csharp/: .gitignore  LICENSE  PublicKey.snk  README.md  UAParser.sln  build.bat  build.proj
csharp/UAParser/: ClientInfo.cs  Device.cs  DeviceParser.cs  DevicePattern.cs  InternalExtensions.cs  OS.cs  OSParser.cs  OSPattern.cs  Parser.cs  UAParser.cs  UAParser.csproj  UAParser.nuspec  UserAgent.cs  UserAgentParser.cs  UserAgentPattern.cs  YamlParsing.cs  packages.config
csharp/UAParser.ConsoleApp/: Program.cs  UAParser.ConsoleApp.csproj  app.config  packages.config
csharp/UAParser.ConsoleApp/Properties/: AssemblyInfo.cs
csharp/UAParser.Tests/: DeviceYamlTestCase.cs  InternalExtensions.cs  ParserTests.cs  TestResourceTests.cs  UAParser.Tests.csproj  YamlParsing.cs  YamlTestCase.cs  packages.config
csharp/UAParser.Tests/Properties/: AssemblyInfo.cs
csharp/UAParser/Properties/: AssemblyInfo.cs
csharp/tools/nunit/: nunit-console.exe.config
d/: LICENSE  README.markdown  UaParser.d  example.d
devel/: README.md  debuginfo.js  device.js  os.js  ua.js  useragents.txt
devel/util/: arguments.js  extend.js  filesync.js  makelists.js  report.js
doc/: specification.md
go/example/: example.go
go/uaparser/: README.md  device.go  device_test.go  os.go  os_test.go  parser.go  user_agent.go  user_agent_test.go
go/uaparser/testing/: additional_os_tests.yaml  firefox_user_agent_strings.yaml  test_device.yaml  test_user_agent_parser.yaml  test_user_agent_parser_os.yaml
haskell/: .ghci  CONTRIBUTORS.md  LICENSE  regexes.yaml  regexes_outdated.yaml  ua-parser.cabal
haskell/src/Web/: UAParser.hs
haskell/src/Web/UAParser/: Core.hs
haskell/test/: .ghci  ua-parser-test.cabal
haskell/test/src/: TestSuite.hs
java/: .gitignore  LICENSE  README.md  pom.xml
js/: .jshintignore  .jshintrc  LICENSE  UserAgent.js  generateInit.js  index.js
js/doc/: uaparser.md
js/lib/: device.js  helpers.js  os.js  results.js  ua.js
js/test/: device.js  helpers.js  old-api.js  os.js  parse.js  ua.js  with_fixtures.js
js/test/load/: load.mocha.js  testcases.js  watch-regexes.yaml
perl/: Changes  MANIFEST  MANIFEST.SKIP  META.json  META.yml  Makefile.PL  README.pod
perl/lib/HTTP/UA/: Parser.pm
perl/lib/YAML/: Tiny.pm
perl/script/: ua_parser
perl/t/: HTTP-UA-Parser.t  additional_os_tests.t  device.t  firefox_user_agent_strings.t  os.t  pgts_browser_list.t  test_device.t  test_firefox.t  test_os.t  test_os2.t  test_ua.t  test_user_agent_parser.t  test_user_agent_parser_os.t  ua.t  utils.pl
perl/t/test_resources/: additional_os_tests.yaml  test_device.yaml  test_user_agent_parser.yaml  test_user_agent_parser_os.yaml
php/: CHANGELOG  LICENSE  README.md  UAParser.php  phpunit.xml.dist  uaparse.php  uaparser-cli.php  uaparser-test.php  uaparser.php
php/lib/spyc-0.5/.svn/: all-wcprops  dir-prop-base  entries
php/resources/: .gitignore  ca-bundle.crt
php/src/UAParser/: AbstractParser.php  DeviceParser.php  OperatingSystemParser.php  Parser.php  UserAgentParser.php
php/src/UAParser/Command/: ConvertCommand.php  FetchCommand.php  LogfileCommand.php  ParserCommand.php  UpdateCommand.php
php/src/UAParser/Exception/: DomainException.php  FetcherException.php  FileNotFoundException.php  InvalidArgumentException.php  ParserException.php  ReaderException.php
php/src/UAParser/Result/: AbstractArtifact.php  AbstractClient.php  Client.php  (+8 more)
pig/: LICENSE.txt  README.md  pom.xml
pig/demo/: .gitignore  demo-atoms.pig  demo-tuples.pig  demo.pig  run.sh  useragents.txt
py/: user_agent_parser.py  user_agent_parser_test.py
py/ua_parser/: __init__.py  user_agent_parser.py  user_agent_parser_test.py
scripts/: update.js
test_resources/: additional_os_tests.yaml  firefox_user_agent_strings.yaml  pgts_browser_list.yaml  test_device.yaml  test_device_outdated.yaml  test_user_agent_parser.yaml  test_user_agent_parser.yaml~  test_user_agent_parser_os.yaml  transform-pgts_browser_list.pl
test_resources/.svn/: all-wcprops  entries
test_resources/.svn/text-base/: firefox_user_agent_strings.txt.svn-base  pgts_browser_list-orig.yaml.svn-base  pgts_browser_list.txt.svn-base  test_user_agent_parser.yaml.svn-base  transform-pgts_browser_list.pl.svn-base
test_resources/.svn/tmp/: test_user_agent_parser.yaml.tmp
tests/: perf.js  uas.js
(+60 files in other folders)
