Name:                ua-parser
Description:         Please refer to the git/github README on the project for example usage.
Version:             0.3
Synopsis:            Port of ua-parser in Haskell
License:             BSD3
License-file:        LICENSE
Author:              Ozgun Ataman
Maintainer:          ozgun.ataman@soostone.com
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.8

data-files: ./*.yaml

source-repository head
  type:     git
  location: https://github.com/tobie/ua-parser
  subdir:   haskell

Library
  hs-source-dirs: src
  Exposed-modules:
    Web.UAParser
    Web.UAParser.Core
  other-modules:
    Paths_ua_parser


  Build-depends:       
      base < 5
    , bytestring
    , text
    , pcre-light
    , yaml >= 0.7
    , aeson
    , filepath
    , data-default
    , syb

  ghc-options: -O2 -Wall  


test-suite test
  type: exitcode-stdio-1.0
  main-is: TestSuite.hs
  hs-source-dirs: src test/src
  ghc-options: -O2 -Wall -fwarn-tabs

  Build-depends:       
      base
    , bytestring
    , text
    , criterion
    , deepseq
    , derive
    , HUnit
    , pcre-light
    , yaml >= 0.7
    , aeson
    , test-framework
    , test-framework-hunit
    , test-framework-quickcheck2
    , data-default
    , syb
    , filepath


