Name:                ua-parser-test
Version:             0.1
Synopsis:            A user agent string parser in Haskell
License:             BSD3
License-file:        LICENSE
Author:              Ozgun Ataman
Maintainer:          ozgun.ataman@soostone.com
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Executable test
  hs-source-dirs: src ../src

  main-is: TestSuite.hs

  Build-depends:       
      base
    , bytestring
    , text
    , criterion
    , deepseq
    , derive
    , HUnit
    , pcre-light
    , yaml >= 0.7
    , aeson
    , test-framework
    , test-framework-hunit
    , test-framework-quickcheck2
    , data-default
    , syb
    , filepath

  ghc-options: -O2 -Wall -fwarn-tabs

  
  -- Modules not exported by this package.
  -- Other-modules:       
  
  -- Extra tools (e.g. alex, hsc2hs, ...) needed to build the source.
  -- Build-tools:         
  